WatchAlert change for publish